--- a/BookShop/config/cable.yml
+++ b/BookShop/config/cable.yml
@@ -7,4 +7,4 @@ test:
 production:
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: BookStore_production
+  channel_prefix: BookShop_production
