--- a/BookShop/config/database.yml
+++ b/BookShop/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: B_development
+  database: BookShop_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: BookStore_test
+  database: BookShop_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: BookStore_production
-  username: BookStore
-  password: <%= ENV['BOOKSTORE_DATABASE_PASSWORD'] %>
+  database: BookShop_production
+  username: BookShop
+  password: <%= ENV['BOOKSHOP_DATABASE_PASSWORD'] %>
