--- a/BookShop/test/fixtures/products.yml
+++ b/BookShop/test/fixtures/products.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  Name: MyString
-  Description: MyText
+  Title: MyString
+  description: MyText
   price: 9.99
   image_url: MyString
 
 two:
-  Name: MyString
-  Description: MyText
+  Title: MyString
+  description: MyText
   price: 9.99
   image_url: MyString
