--- a/omega/Gemfile
+++ b/omega/Gemfile
@@ -27,6 +27,10 @@ gem 'jbuilder', '~> 2.7'
 
 gem 'devise'
 
+gem 'omniauth'
+
+gem "omniauth-google-oauth2"
+
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.2', require: false
 
