--- a/camera_store/Gemfile
+++ b/camera_store/Gemfile
@@ -44,3 +44,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'devise'
 
 gem 'devise-jwt', '~> 0.8.0'
+gem 'awesome_print'
