--- a/API/Iconnect/Gemfile
+++ b/API/Iconnect/Gemfile
@@ -39,3 +39,9 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+
+gem 'devise'
+
+gem 'devise-jwt', '~> 0.8.0'
+gem 'awesome_print'
